--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
           tag: ${{ steps.tag_release_step.outputs.new_tag }}
           name: Release ${{ steps.tag_release_step.outputs.new_tag }}
           body: ${{ steps.tag_release_step.outputs.changelog }}
-          artifacts: "build/backtester,build/live_strategy"
+          artifacts: "README.md"
 
       - name: Slack Notify (success)
         if: success()
