fix(ci.yml): don't run install; just  install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build
         id: build_step
         run: |
-          yarn run install
+          yarn install
 
       - name: Build
         id: test_step
